# starapple-haskell-starter

./: .gitignore  LICENSE  README.md  stack.yaml  starapple.cabal
app/: Commands.hs  Game.hs  Main.hs  Move.hs  Random.hs
pack/: Main.hs
