name:                starapple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/asvyazin/starapple#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
copyright:           2017 Alexander Svyazin
category:            Competetive Programming
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable starapple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Game
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable starapple-pack
           hs-source-dirs: pack
           main-is: Main.hs
           ghc-options:         -threaded -rtsopts -with-rtsopts=-N
           build-depends:       base,
                                bytestring,
                                Cabal,
                                directory,
                                filepath,
                                zip-archive
           default-language:    Haskell2010
           

source-repository head
  type:     git
  location: https://github.com/asvyazin/starapple
